# Weather_bot_telegram

./: .env  .env.template  Dockerfile  LICENSE.txt  README.md  docker-compose.yaml  history.db  main.py  pyproject.toml
Weather_BOT_telegram/: history.db  loader.py  requirements.txt  settings.py
Weather_BOT_telegram/config_data/: config.py
Weather_BOT_telegram/database/: core.py
Weather_BOT_telegram/handlers/custom_handlers/: site_api_handler.py
Weather_BOT_telegram/handlers/default_handlers/: basic_functions_handler.py  hello.py  help_handler.py  history.py
Weather_BOT_telegram/keyboards/reply/: start_keyboard.py
Weather_BOT_telegram/tg_API/utils/: tg_api_handlers.py
database/: database_CRUD.py  models.py
handlers/custom_handlers/: weather_handler.py
handlers/default_handlers/: __init__.py  hello_world.py  start_handler.py  test_handler.py
tg_API/: core.py
utils/: check_and_save.py  history.db  return_weather.py
