[tool.poetry]
name = "weather-bot-telegram"
version = "0.1.0"
description = ""
authors = ["Alex Basso <alexandr.basso@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "23.1.0"
aiogram = "3.0.0b7"
aiohttp = "3.8.4"
aiosignal = "1.3.1"
async-timeout = "4.0.2"
attrs = "23.1.0"
certifi = "2023.5.7"
charset-normalizer = "3.1.0"
colorama = "0.4.6"
frozenlist = "1.3.3"
idna = "3.4"
loguru = "0.7.0"
magic-filter = "1.0.9"
multidict = "6.0.4"
mypy = "1.3.0"
mypy-extensions = "1.0.0"
null = "0.6.1"
peewee = "3.16.2"
pep8 = "1.7.1"
pydantic = "1.10.7"
python-dotenv = "1.0.0"
requests = "2.30.0"
six = "1.16.0"
typing-extensions = "4.5.0"
urllib3 = "2.0.2"
win32-setctime = "1.1.0"
yarl = "1.9.2"
pytz = "^2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
